--- a/public/user/styles/index.css
+++ b/public/user/styles/index.css
@@ -9,7 +9,7 @@ span.username {
     font-weight: normal;
 }
 
-h1 img {
+h1 div.pp-large {
     float: right;
 }
 
